[package]
name = "polkadot-primitives"
version = "0.9.26"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.137", optional = true, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["bit-vec", "derive"] }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["bit-vec", "derive"] }
primitives = { package = "sp-core", git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }
inherents = { package = "sp-inherents", git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }
application-crypto = { package = "sp-application-crypto", git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }
sp-consensus-slots = { git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }
sp-keystore = { git = "https://github.com/tdimitrov/substrate", optional = true , branch = "staging_api" }
sp-api = { git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }
sp-version = { git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }
sp-std = { package = "sp-std", git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }
sp-io = { git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }
sp-staking = { git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }
sp-arithmetic = { git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }
sp-authority-discovery = { git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }
polkadot-parachain = { path = "../parachain", default-features = false }
polkadot-core-primitives = { path = "../core-primitives", default-features = false }
trie = { package = "sp-trie", git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
frame-system = { git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }
hex-literal = "0.3.4"
parity-util-mem = { version = "0.11.0", default-features = false, optional = true }

[features]
default = ["std"]
std = [
	"application-crypto/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"primitives/std",
	"inherents/std",
	"trie/std",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-consensus-slots/std",
	"sp-keystore",
	"sp-std/std",
	"sp-io/std",
	"sp-version/std",
	"sp-staking/std",
	"sp-arithmetic/std",
	"runtime_primitives/std",
	"serde",
	"parity-util-mem",
	"polkadot-parachain/std",
	"polkadot-core-primitives/std",
	"bitvec/std",
	"frame-system/std",
]
runtime-benchmarks = []
