[package]
name = "polkadot-rpc"
version = "0.9.26"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
jsonrpsee = { version = "0.14.0", features = ["server"] }
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-blockchain = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-keystore = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-runtime = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-api = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-consensus = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-consensus-babe = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-chain-spec = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-rpc = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-consensus-babe = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-consensus-babe-rpc = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-consensus-epochs = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-finality-grandpa = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-finality-grandpa-rpc = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-sync-state-rpc = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
pallet-mmr-rpc = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
pallet-transaction-payment-rpc = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-block-builder = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
beefy-gadget = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
beefy-gadget-rpc = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
substrate-state-trie-migration-rpc = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
