[package]
name = "polkadot-client"
version = "0.9.26"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
frame-benchmarking = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
frame-benchmarking-cli = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
pallet-transaction-payment = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
frame-system = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
frame-system-rpc-runtime-api = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }

sp-consensus = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-storage = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-runtime = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-blockchain = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-api = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-core = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-keyring = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-inherents = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-timestamp = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-session = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-authority-discovery = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-finality-grandpa = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-consensus-babe = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-transaction-pool = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-block-builder = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-mmr-primitives = { git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }

sc-consensus = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-executor = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-client-api = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-service = { git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }

beefy-primitives = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }

# Polkadot Runtimes
polkadot-runtime = { path = "../../runtime/polkadot", optional = true }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
westend-runtime = { path = "../../runtime/westend", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

polkadot-core-primitives = { path = "../../core-primitives" }
polkadot-primitives = { path = "../../primitives" }
polkadot-node-core-parachains-inherent = { path = "../core/parachains-inherent" }
polkadot-runtime-common = { path = "../../runtime/common" }

[features]
default = ["polkadot"]
polkadot = ["polkadot-runtime"]
kusama = ["kusama-runtime"]
rococo = ["rococo-runtime"]
westend = ["westend-runtime"]
runtime-metrics = [
    "rococo-runtime/runtime-metrics",
    "kusama-runtime/runtime-metrics",
    "westend-runtime/runtime-metrics",
    "polkadot-runtime/runtime-metrics",
]
