[package]
name = "polkadot-node-subsystem-test-helpers"
version = "0.9.26"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Subsystem traits and message definitions"

[dependencies]
async-trait = "0.1.53"
futures = "0.3.21"
parking_lot = "0.12.0"
polkadot-node-subsystem = { path = "../subsystem" }
polkadot-node-subsystem-util = { path = "../subsystem-util" }
polkadot-primitives = { path = "../../primitives" }
sp-core = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-keystore = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-keystore = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-keyring = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-application-crypto = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }

[dev-dependencies]
polkadot-overseer = { path = "../overseer" }
