[package]
name = "polkadot-primitives-test-helpers"
version = "0.9.26"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
sp-keyring = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }
sp-runtime = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
polkadot-primitives = { path = "../" }
rand = "0.8.5"
