[package]
name = "polkadot-statement-distribution"
version = "0.9.26"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Statement Distribution Subsystem"
edition = "2021"

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
polkadot-primitives = { path = "../../../primitives" }
sp-staking = { git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }
sp-keystore = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
polkadot-node-subsystem = {path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-node-subsystem-util = { path = "../../subsystem-util" }
polkadot-node-network-protocol = { path = "../../network/protocol" }
arrayvec = "0.5.2"
indexmap = "1.9.0"
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
fatality = "0.0.6"

[dev-dependencies]
polkadot-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
assert_matches = "1.4.0"
sp-authority-discovery = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-keyring = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-core = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-application-crypto = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-keystore = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-tracing = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-keystore = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-network = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
futures-timer = "3.0.2"
polkadot-primitives-test-helpers = { path = "../../../primitives/test-helpers" }
