[package]
name = "polkadot-test-client"
version = "0.9.26"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-service = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-block-builder = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-consensus = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-blockchain = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-runtime = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-inherents = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-core = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-api = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-timestamp = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-consensus = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-consensus-babe = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-state-machine = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
futures = "0.3.21"
