[package]
name = "polkadot-test-service"
version = "0.9.26"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
futures = "0.3.21"
hex = "0.4.3"
gum = { package = "tracing-gum", path = "../../gum" }
rand = "0.8.5"
tempfile = "3.2.0"
tokio = "1.18.2"

# Polkadot dependencies
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-parachain = { path = "../../../parachain" }
polkadot-rpc = { path = "../../../rpc" }
polkadot-runtime-common = { path = "../../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
test-runtime-constants = { path = "../../../runtime/test-runtime/constants" }
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }

# Substrate dependencies
sp-authority-discovery = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-authority-discovery = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
babe = { package = "sc-consensus-babe", git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
consensus_common = { package = "sp-consensus", git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
frame-benchmarking = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
frame-system = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
inherents = { package = "sp-inherents", git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
pallet-staking = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
pallet-balances = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
pallet-transaction-payment = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-chain-spec = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-cli = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-client-api = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-consensus = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-executor = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-network = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-tracing = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-transaction-pool = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sc-service = { git = "https://github.com/tdimitrov/substrate", default-features = false, features = [ "wasmtime" ] , branch = "staging_api" }
sp-arithmetic = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-blockchain = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-core = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-keyring = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-runtime = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
sp-state-machine = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
substrate-test-client = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/tdimitrov/substrate", default-features = false , branch = "staging_api" }
serde_json = "1.0.81"
substrate-test-utils = { git = "https://github.com/tdimitrov/substrate", branch = "staging_api" }
tokio = { version = "1.18.2", features = ["macros"] }

[features]
runtime-metrics=["polkadot-test-runtime/runtime-metrics"]
